# Bmad-Method-v3

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  platform-architecture-decisions.md  pyproject.toml  requirements.txt  tsconfig.base.json
.bmad-core/: install-manifest.yaml
backend/: pyproject.toml
backend/quality/: onboarding.py  piloto-operacional-resultados.md  privacy.py
backend/quality/observability/runbooks/: critical-alerts.md  disaster-recovery.md  escalation-l2.md  finops-rollback.md  qa-gates.md
backend/quality/reports/: piloto-operacional-exports.csv  visual-audit-2024-10-30.md
backend/services/billing/: __init__.py  main.py
backend/services/billing/api/: dependencies.py  schemas.py
backend/services/core/: automation.py  database.py  metrics.py  notifications.py  observability.py
backend/services/core/aiops/: monitoring.py  training.py
backend/services/core/analytics/: pipelines.py  query.py
backend/services/core/analytics/ingestion/: __init__.py  kafka.py
backend/services/core/api/: graphql.py  rest.py
backend/services/core/domain/: models.py  playbooks.py  schemas.py
backend/services/core/events/: __init__.py
backend/services/core/extensions/: __init__.py
backend/services/core/inventory/: __init__.py
backend/services/core/knowledge_base/: __init__.py  repository.py
backend/services/core/marketplace/: service.py
backend/services/core/ota_sync/: __init__.py
backend/services/core/payments/: partners.py
backend/services/core/recommendations/: engine.py
backend/services/core/security/: __init__.py  auth.py
backend/services/core/services/: __init__.py  partners.py
backend/services/core/tenancy/: __init__.py  bootstrap.py
backend/services/identity/: __init__.py  api.py  models.py  repositories.py  schemas.py
backend/services/payments/: api.py  models.py  storage.py  webhooks.py
backend/services/payments/gateways/: __init__.py
backend/services/property/: schemas.py
backend/tests/: conftest.py
backend/tests/api/: test_properties_calendar.py  test_properties_reconciliation.py
backend/tests/contracts/: conftest.py  test_marketplace_contracts.py
backend/tests/data/: synthetic_guests.json
backend/tests/data/seed/: guest_preferences.json
backend/tests/e2e/: test_onboarding_flow.py
backend/tests/e2e/analytics/: dashboard.spec.ts  playwright.config.ts
backend/tests/e2e/guest_experience/: test_guest_flow.py
backend/tests/e2e/payments/: test_gateway_flows.py
backend/tests/e2e/playbooks/: playbooks.spec.ts  playwright.config.ts
backend/tests/housekeeping/: test_housekeeping_endpoint.py
backend/tests/i18n/: test_localization_backend.py  test_pipeline.py
backend/tests/integration/: test_core_api.py  test_governance_api.py  test_payments_gateway.py  test_reservations_reconciliation.py
backend/tests/load/: tenant-isolation.k6.js
backend/tests/services/: test_tenant_manager.py
backend/tests/services/identity/: test_identity_api.py
backend/tests/unit/: test_aiops.py  test_analytics_pipeline.py  test_feedback_repository.py  test_grafana_alert_routing.py  test_metrics.py  test_ota_sync_contracts.py  test_payment_gateway_service.py  test_payment_webhook_signatures.py  test_privacy.py  test_security.py
backend/tests/web/governanca/: governanca-page.test.tsx
backend/tests/web/onboarding/: onboarding-wizard.test.tsx
(+1134 files in other folders)
